--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -8,7 +8,7 @@ title = "Airspace | Creative Agency Hugo Template"
 [Languages.en]
 contentDir = "content/english"
 copyright = "Copyright &copy; 2019 [Themefisher](https://themefisher.com) All Rights Reserved"
-home = "Home"
+home = "Accueil"
 languageCode = "en-us"
 languageName = "En"
 weight = 1
