--- a/theme.toml
+++ b/theme.toml
@@ -5,7 +5,7 @@ license = "CC BY 3.0"
 licenselink = "https://creativecommons.org/licenses/by/3.0/"
 description = "Hugo port of the Themefisher’s Airspace theme"
 homepage = "https://gethugothemes.com/products/airspace-hugo-theme/"
-tags = ["blog",'google-analytics', 'fast', 'modern', 'minimal', 'minimalistic', 'business', 'agency-template', 'white', 'light', 'multilingual', "bootstrap", "company", "portfolio", "projects", "responsive", "themefisher"]
+tags = ["blog",'google-analytics', 'ionsat', 'modern', 'minimal', 'minimalistic', 'business', 'agency-template', 'white', 'light', 'multilingual', "bootstrap", "company", "portfolio", "projects", "responsive", "themefisher"]
 features = ["blog", "company", "responsive", "seo-friendly"]
 min_version = "0.64.0"
 
