--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -109,4 +109,4 @@ icon = "ion-social-twitter-outline"
 link = "#"
 [[params.social]]
 icon = "ion-social-facebook-outline"
-link = "#"
+link = "https://www.facebook.com"
